--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,15 @@
 body {
-	background: yellow;
-	text-align: center;
+	background: whitesmoke;
 	color: blue;
+	font-family: "Arial";
+}
+
+.container {
+	margin: 5rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: 1px solid gray;
+	border-radius: 20px;
+	color: black;
 }
