--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,33 @@ body {
 .container {
 	margin: 5rem;
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	flex-direction: column;
 	border: 1px solid gray;
-	border-radius: 20px;
+	border-radius: 10px;
 	color: black;
+	overflow: hidden;
+}
+
+
+.cabecera {
+	background-color: #507ceb;
+	padding: 1.2rem;
+	text-transform: capitalize;
+	font-size: x-large;
+	box-shadow: 0px 10px 20px 0px rgba(149,158,204,0.64);
+	font-weight: bold;
+}
+
+.cabecera > .little-message {
+	color: white;
+	font-size: 10px;
+	text-transform: none;
+}
+
+.post {
+	padding: 1.3rem;
+}
+
+.post > h1 {
+	font-size: 23px;
 }
