--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body {
 	flex-direction: column;
 	border: 1px solid gray;
 	border-radius: 10px;
-	color: black;
+	color: red;
 	overflow: hidden;
 }
 
